# Whizzle

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
doc/: linking  structure
src/: card.cpp  card.h  card_manager.cpp  card_manager.h  core.cpp  core.h  main.cpp  network_manager.cpp  network_manager.h  player.cpp  player.h
src/gamelogic/: base_card.cpp  base_card.h  guess_card.cpp  guess_card.h  play_card.cpp  play_card.h
src/manager/: card_manager.cpp  card_manager.h  game_manager.cpp  game_manager.h  input_manager.cpp  input_manager.h  network_manager.cpp  network_manager.h  resource_manager.cpp  resource_manager.h  state_manager.cpp  state_manager.h
src/network/: base_network_component.cpp  base_network_component.h  client_component.cpp  client_component.h  host_component.cpp  host_component.h
src/player/: base_player.cpp  base_player.h  local_player.cpp  local_player.h  remote_player.cpp  remote_player.h
src/state/: base_state.cpp  base_state.h  connect.cpp  connect.h  loading.cpp  loading.h  lost.cpp  lost.h  main_menu.cpp  main_menu.h  network_issue.cpp  network_issue.h  play.cpp  play.h  play_menu.cpp  play_menu.h  room_creation.cpp  room_creation.h  won.cpp  won.h
src/userinterface/: avatar.cpp  avatar.h  button_bar.cpp  button_bar.h  chat.cpp  chat.h  chat_entry.cpp  chat_entry.h  deck.cpp  deck.h  hand.cpp  hand.h  label.cpp  label.h  notification_bubble.cpp  notification_bubble.h  placed_card.cpp  placed_card.h  room_id_cards.cpp  room_id_cards.h  score.cpp  score.h  scroll_text_box.cpp  scroll_text_box.h  text_entity.cpp  (+3 more)
test/: main.cpp
(+4 files in other folders)
